crates/pardosa/tests/ui/no_root_writer_module.rs
use pardosa::writer::EventLog;
fn main() {
    let _: Option<EventLog<u64, std::io::Cursor<Vec<u8>>>> = None;
}
